--- a/LanguageSchool/Views/Group/StudentDetails.cshtml
+++ b/LanguageSchool/Views/Group/StudentDetails.cshtml
@@ -6,50 +6,49 @@
 }
 
 <div class="container-fluid">
-    @Html.Partial("_PartHeader", Model.StudentName)
-
-    @Html.Partial("_PartHeader", "Testy ocenione")
+    @Html.Partial("_PartHeader", "Dane studenta")
     <div class="row">
         <div class="bordered col-md-12">
-            <table class="table table-striped table-bordered">
-                <tr>
-                    <th>
-                        Data
-                    </th>
-                    <th>
-                        Nazwa
-                    </th>
-                    <th>
-                        Komentarz
-                    </th>
-                    <th>
-                        Uzyskane punkty
-                    </th>
-                    <th>
-                        Ocena
-                    </th>
-                </tr>
-                @foreach (var test in Model.TakenTests)
-                {
-                    <tr>
-                        <td>
-                            @test.CreationDate
-                        </td>
-                        <td>
-                            @Html.ActionLink(test.Name, "Taken", "Test", new { Id = test.UserTestId }, null)
-                        </td>
-                        <td>
-                            @test.Comment
-                        </td>
-                        <td>
-                            @test.PointsAwarded / @test.Points
-                        </td>
-                        <td>
-                            @test.Mark
-                        </td>
-                    </tr>
-                }
-            </table>
+            <div class="row">
+                <div class="col-md-3">
+                    <label>
+                        Imię i nazwisko
+                    </label>
+                </div>
+                <div class="col-md-3">
+                    @Html.DisplayFor(model => model.StudentName)
+                </div>
+
+                <div class="col-md-3">
+                    <label>
+                        Numer telefonu
+                    </label>
+                </div>
+                <div class="col-md-3">
+                    @Html.DisplayFor(model => model.PhoneNumber)
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <label>
+                        Zapisano do grupy
+                    </label>
+                </div>
+                <div class="col-md-3">
+                    @Html.DisplayFor(model => model.EnrollmentDate)
+                </div>
+
+                <div class="col-md-3">
+                    <label>Adres email
+                    </label>
+                </div>
+                <div class="col-md-3">
+                    @Html.DisplayFor(model => model.EmailAdress)
+                </div>
+            </div>
+        </div>
+        <div class="col-md-2 col-md-offset-9">
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("Create", "UserMessage", new { userId = @Model.StudentId })'">Wyślij komunikat</button>
         </div>
     </div>
 
@@ -110,4 +109,49 @@
             </div>
         </div>
     }
+
+    @Html.Partial("_PartHeader", "Testy ocenione")
+    <div class="row">
+        <div class="bordered col-md-12">
+            <table class="table table-striped table-bordered">
+                <tr>
+                    <th>
+                        Data
+                    </th>
+                    <th>
+                        Nazwa
+                    </th>
+                    <th>
+                        Komentarz
+                    </th>
+                    <th>
+                        Uzyskane punkty
+                    </th>
+                    <th>
+                        Ocena
+                    </th>
+                </tr>
+                @foreach (var test in Model.TakenTests)
+                {
+                    <tr>
+                        <td>
+                            @test.CreationDate
+                        </td>
+                        <td>
+                            @Html.ActionLink(test.Name, "Taken", "Test", new { Id = test.UserTestId }, null)
+                        </td>
+                        <td>
+                            @test.Comment
+                        </td>
+                        <td>
+                            @test.PointsAwarded / @test.Points
+                        </td>
+                        <td>
+                            @test.Mark
+                        </td>
+                    </tr>
+                }
+            </table>
+        </div>
+    </div>
 </div>
