--- a/LanguageSchool/Views/UserOpenAnswer/Mark.cshtml
+++ b/LanguageSchool/Views/UserOpenAnswer/Mark.cshtml
@@ -9,7 +9,7 @@
 {
     @Html.HiddenFor(model => model.Id)
     @Html.HiddenFor(model => model.UserId)
-    @Html.HiddenFor(model => model.TestId)
+    @Html.HiddenFor(model => model.UserTestId)
     @Html.HiddenFor(model => model.QuestionId)
 
     <div class="container">
