--- a/LanguageSchool/Views/Group/FullDetails.cshtml
+++ b/LanguageSchool/Views/Group/FullDetails.cshtml
@@ -1,4 +1,6 @@
-﻿@model LanguageSchool.Models.ViewModels.GroupViewModel
+﻿@using LanguageSchool.Models.ViewModels
+
+@model LanguageSchool.Models.ViewModels.GroupViewModel
 
 @{
     ViewBag.Title = "Details";
@@ -6,7 +8,7 @@
 }
 
 <div class="container">
-    @{ Html.RenderPartial("_PartHeader", "Dane grupy"); }
+    @Html.Partial("_PartHeader", "Dane grupy")
     <div class="row">
         <div class="bordered col-md-12">
             <div class="row">
@@ -57,7 +59,7 @@
                 <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("Edit", "Group")'">Edytuj</button>
             </div>
             <div class="col-md-6">
-                <button class="btn btn-block btn-danger" type="button" onclick="location.href='@Url.Action("Delete", "Group")'">Usuń</button>
+                <button class="btn btn-block btn-danger" type="button" data-toggle="modal" data-target="#deleteDialog">Usuń</button>
             </div>
         </div>
     </div>
@@ -122,3 +124,11 @@
         </div>
     </div>
 </div>
+
+@Html.Partial("_DeleteDialog",
+    new DeleteDialogViewModel(
+        Model.GroupId,
+        "Group",
+        "Czy na pewno chcesz usunąć grupę? Przypisane do niej osoby utracą do niej dostęp. Przypisane do niej materiały staną się niedostępne dla prowadzących przypisanych do kursu."
+    )
+)
