--- a/LanguageSchool/Views/Shared/_DeleteDialog.cshtml
+++ b/LanguageSchool/Views/Shared/_DeleteDialog.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LanguageSchool.Models.ViewModels.DeleteDialogViewModel
 
-<div class="modal fade" id="deleteDialog" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+<div class="modal fade" id=@Model.ModalId tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
